bk_ida/gobmkida/g1/stones_on_board
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/stones_on_board/src/engine/board.c:3134:6: error: use of undeclared identifier 'stone_count_for_position_2'
if ( stone_count_for_position_2 != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/stones_on_board/src/engine/board.c:3136:1: error: use of undeclared identifier 'white_stones_1'
white_stones_1 = 0; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/stones_on_board/src/engine/board.c:3137:1: error: use of undeclared identifier 'black_stones_0'
black_stones_0 = 0; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/stones_on_board/src/engine/board.c:3159:1: error: use of undeclared identifier 'white_stones_1'
white_stones_1 = v5; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/stones_on_board/src/engine/board.c:3161:1: error: use of undeclared identifier 'black_stones_0'
black_stones_0 = v3; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/stones_on_board/src/engine/board.c:3162:1: error: use of undeclared identifier 'stone_count_for_position_2'
stone_count_for_position_2 = position_number; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/stones_on_board/src/engine/board.c:3166:6: error: use of undeclared identifier 'black_stones_0'
v6 = black_stones_0; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/stones_on_board/src/engine/board.c:3169:6: error: use of undeclared identifier 'white_stones_1'
v7 = white_stones_1; 
     ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/stones_on_board/src/obj/1/board.o] Error 1
